--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "tailwindcss": "^3.4.15"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-native": "^0.72.8",
+    "typescript": "^5.6.3"
   }
 }
