Criado Janela de Cadastro | Implementado recurso de login e senha com APPWrite | Falta ajustar recurso de erro por já estar logado

--- a/my-app/app.json
+++ b/my-app/app.json
@@ -13,8 +13,10 @@
     },
     "android": {
       "adaptiveIcon": {
+        "package": "com.moovcolum.almeidaapp",
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+        
       }
     },
     "web": {
