--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "expo/tsconfig.base", // Estende as configurações padrão do Expo
   "compilerOptions": {
+    "useUnknownInCatchVariables": false,
     "strict": true, // Habilita as verificações estritas de tipo (muito útil para evitar erros)
     "jsx": "react-native", // Garante que o JSX será compilado corretamente para React Native
     "moduleResolution": "node", // Usado para resolução de módulos, similar a Node.js
