--- a/my-app/package.json
+++ b/my-app/package.json
@@ -35,7 +35,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.3",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -44,7 +44,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.12.4",
+    "react-native-webview": "^13.12.2",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
