Resolvido bug da janela Create

--- a/my-app/app.json
+++ b/my-app/app.json
@@ -9,13 +9,18 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "Este aplicativo precisa acessar sua biblioteca de fotos para upload de imagens."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "package": "com.moovcolum.almeidaapp",
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "permissions": ["READ_EXTERNAL_STORAGE"]
+
         
       }
     },
@@ -25,6 +30,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      
       "expo-router",
       [
         "expo-splash-screen",
@@ -37,6 +43,13 @@
       ],
       [
         "expo-av",
+        {
+          "supportsBackgroundPlayback": true,
+          "supportsPictureInPicture": true
+        }
+      ],
+      [
+        "expo-video",
         {
           "supportsBackgroundPlayback": true,
           "supportsPictureInPicture": true
