--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-document-picker": "^13.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
@@ -41,9 +42,10 @@
     "react-native-appwrite": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-video": "^6.8.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.2",
     "tailwindcss": "^3.4.15"
