--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "expo-document-picker": "^13.0.1",
     "expo-video": "^2.0.1",
     "nativewind": "^4.1.23",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
+    "react-native-video": "^6.8.2",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
