--- a/my-app/app.json
+++ b/my-app/app.json
@@ -16,13 +16,16 @@
     },
     "android": {
       "adaptiveIcon": {
-        "package": "com.moovcolum.almeidaapp",
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff",
-        "permissions": ["READ_EXTERNAL_STORAGE"]
-
-        
-      }
+        "backgroundColor": "#ffffff"
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ],
+      "package": "com.lampier.appteste"
     },
     "web": {
       "bundler": "metro",
@@ -30,12 +33,11 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/splash.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
@@ -58,6 +60,20 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "237f1bc6-66de-447a-b5f2-e5b302bbf302"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/237f1bc6-66de-447a-b5f2-e5b302bbf302"
     }
   }
 }
