--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "vendaspa",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -44,6 +44,7 @@
     "react-native": "^0.76.3",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -66,11 +67,10 @@
   },
   "private": true,
   "expo": {
-  "doctor": {
-    "reactNativeDirectoryCheck": {
-      "listUnknownPackages": false
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
     }
   }
-}
-
 }
